--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.13.2",
     "firebase": "^12.7.0",
     "framer-motion": "^12.29.2",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.562.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
